# adventure

./: .gitignore  .pre-commit-config.yaml  README.md  adventure.py  fonts.py  keyboard.py  pyproject.toml  scene.py  text_animations.py
.github/workflows/: manim.yml
