[tool.poetry]
name = "adventure"
version = "0.1.0"
description = ""
authors = ["wooferzfg <spapushin@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
manim = "^0.15.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.18.1"
pyupgrade = "^2.32.0"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
